# netdiscover

./: .flake8  .pylintrc  LICENSE  pyproject.toml
src/netdiscover/: cli.py  worker.py
